# atoms_simulator

./: LICENSE  MANIFEST.in  README.md  atoms_simulator.toml  dev_options.toml  requirements.txt  settings.toml  setup.cfg
assets/: settings_source.toml
atoms_simulator/: AUTHORS  __init__.py  __main__.py  atoms_simulator.py
atoms_simulator/assets/: settings_source.toml
