[metadata]
name = atoms_simulator
version = attr: atoms_simulator.__version__
description = Simulation of gas particles in a closed container.
author = attr: atoms_simulator.__authors__
author_email = jakub.blazejowski@student.put.poznan.pl
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/Jorewin/atoms_simulator
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment :: Simulation

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
install_requires =
    pygame >= 1.9.6
    toml >= 0.10.1
    click

[options.entry_points]
console_scripts =
    ats = bin.processor:ats